added caution message for mouse-zoomable conflict with elasticX

--- a/web/examples/index.html
+++ b/web/examples/index.html
@@ -8,100 +8,103 @@ Source <a href="https://github.com/dc-js/dc.js/tree/master/web/examples">
 here</a>.</p>
 <table class="table">
   <tr>
-    <td><a href="adjustable-threshold.html">adjustable threshold</a></td>
-    <td><a href="align-axes.html">align axes</a></td>
-    <td><a href="area.html">area</a></td>
-    <td><a href="background-drawing.html">background drawing</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\adjustable-threshold.html">C:\Users\MohanKiranMathew\dc.js\web\examples\adjustable threshold</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\align-axes.html">C:\Users\MohanKiranMathew\dc.js\web\examples\align axes</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\area.html">C:\Users\MohanKiranMathew\dc.js\web\examples\area</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\background-drawing.html">C:\Users\MohanKiranMathew\dc.js\web\examples\background drawing</a></td>
   </tr>
   <tr>
-    <td><a href="bar-extra-line.html">bar extra line</a></td>
-    <td><a href="bar-single-select.html">bar single select</a></td>
-    <td><a href="bar.html">bar</a></td>
-    <td><a href="boxplot-basic.html">boxplot basic</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\bar-extra-line.html">C:\Users\MohanKiranMathew\dc.js\web\examples\bar extra line</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\bar-single-select.html">C:\Users\MohanKiranMathew\dc.js\web\examples\bar single select</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\bar.html">C:\Users\MohanKiranMathew\dc.js\web\examples\bar</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\boxplot-basic.html">C:\Users\MohanKiranMathew\dc.js\web\examples\boxplot basic</a></td>
   </tr>
   <tr>
-    <td><a href="boxplot-enhanced.html">boxplot enhanced</a></td>
-    <td><a href="boxplot-render-data.html">boxplot render data</a></td>
-    <td><a href="boxplot-time.html">boxplot time</a></td>
-    <td><a href="brush-ordinal.html">brush ordinal</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\boxplot-enhanced.html">C:\Users\MohanKiranMathew\dc.js\web\examples\boxplot enhanced</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\boxplot-render-data.html">C:\Users\MohanKiranMathew\dc.js\web\examples\boxplot render data</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\boxplot-time.html">C:\Users\MohanKiranMathew\dc.js\web\examples\boxplot time</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\brush-ordinal.html">C:\Users\MohanKiranMathew\dc.js\web\examples\brush ordinal</a></td>
   </tr>
   <tr>
-    <td><a href="cap-and-sort-differently.html">cap and sort differently</a></td>
-    <td><a href="cbox-menu.html">cbox menu</a></td>
-    <td><a href="click-limit-on-histogram.html">click limit on histogram</a></td>
-    <td><a href="compare-unfiltered.html">compare unfiltered</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\cap-and-sort-differently.html">C:\Users\MohanKiranMathew\dc.js\web\examples\cap and sort differently</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\cbox-menu.html">C:\Users\MohanKiranMathew\dc.js\web\examples\cbox menu</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\click-limit-on-histogram.html">C:\Users\MohanKiranMathew\dc.js\web\examples\click limit on histogram</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\compare-unfiltered.html">C:\Users\MohanKiranMathew\dc.js\web\examples\compare unfiltered</a></td>
   </tr>
   <tr>
-    <td><a href="complex-reduce.html">complex reduce</a></td>
-    <td><a href="composite-bar-line.html">composite bar line</a></td>
-    <td><a href="composite-brush-multi-dim.html">composite brush multi dim</a></td>
-    <td><a href="composite.html">composite</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\complex-reduce.html">C:\Users\MohanKiranMathew\dc.js\web\examples\complex reduce</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\composite-bar-line.html">C:\Users\MohanKiranMathew\dc.js\web\examples\composite bar line</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\composite-brush-multi-dim.html">C:\Users\MohanKiranMathew\dc.js\web\examples\composite brush multi dim</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\composite.html">C:\Users\MohanKiranMathew\dc.js\web\examples\composite</a></td>
   </tr>
   <tr>
-    <td><a href="download-table.html">download table</a></td>
-    <td><a href="filter-stacks.html">filter stacks</a></td>
-    <td><a href="filtering-removing.html">filtering removing</a></td>
-    <td><a href="filtering.html">filtering</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\download-table.html">C:\Users\MohanKiranMathew\dc.js\web\examples\download table</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\filter-stacks.html">C:\Users\MohanKiranMathew\dc.js\web\examples\filter stacks</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\filtering-removing.html">C:\Users\MohanKiranMathew\dc.js\web\examples\filtering removing</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\filtering.html">C:\Users\MohanKiranMathew\dc.js\web\examples\filtering</a></td>
   </tr>
   <tr>
-    <td><a href="focus-dynamic-data.html">focus dynamic data</a></td>
-    <td><a href="focus-dynamic-interval.html">focus dynamic interval</a></td>
-    <td><a href="focus-ordinal-bar.html">focus ordinal bar</a></td>
-    <td><a href="heat.html">heat</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\focus-dynamic-data.html">C:\Users\MohanKiranMathew\dc.js\web\examples\focus dynamic data</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\focus-dynamic-interval.html">C:\Users\MohanKiranMathew\dc.js\web\examples\focus dynamic interval</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\focus-ordinal-bar.html">C:\Users\MohanKiranMathew\dc.js\web\examples\focus ordinal bar</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\heat.html">C:\Users\MohanKiranMathew\dc.js\web\examples\heat</a></td>
   </tr>
   <tr>
-    <td><a href="heatmap-filtering.html">heatmap filtering</a></td>
-    <td><a href="html-legend.html">html legend</a></td>
-    <td><a href="line.html">line</a></td>
-    <td><a href="multi-focus.html">multi focus</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\heatmap-filtering.html">C:\Users\MohanKiranMathew\dc.js\web\examples\heatmap filtering</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\html-legend.html">C:\Users\MohanKiranMathew\dc.js\web\examples\html legend</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\index.html">C:\Users\MohanKiranMathew\dc.js\web\examples\index</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\line.html">C:\Users\MohanKiranMathew\dc.js\web\examples\line</a></td>
   </tr>
   <tr>
-    <td><a href="multi-scatter.html">multi scatter</a></td>
-    <td><a href="number.html">number</a></td>
-    <td><a href="ordinal-bar.html">ordinal bar</a></td>
-    <td><a href="ordinal-line.html">ordinal line</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\multi-focus.html">C:\Users\MohanKiranMathew\dc.js\web\examples\multi focus</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\multi-scatter.html">C:\Users\MohanKiranMathew\dc.js\web\examples\multi scatter</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\number.html">C:\Users\MohanKiranMathew\dc.js\web\examples\number</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\ordinal-bar.html">C:\Users\MohanKiranMathew\dc.js\web\examples\ordinal bar</a></td>
   </tr>
   <tr>
-    <td><a href="pie-external-labels.html">pie external labels</a></td>
-    <td><a href="pie.html">pie</a></td>
-    <td><a href="range-series.html">range series</a></td>
-    <td><a href="replacing-data.html">replacing data</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\ordinal-line.html">C:\Users\MohanKiranMathew\dc.js\web\examples\ordinal line</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\pie-external-labels.html">C:\Users\MohanKiranMathew\dc.js\web\examples\pie external labels</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\pie.html">C:\Users\MohanKiranMathew\dc.js\web\examples\pie</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\range-series.html">C:\Users\MohanKiranMathew\dc.js\web\examples\range series</a></td>
   </tr>
   <tr>
-    <td><a href="right-axis.html">right axis</a></td>
-    <td><a href="row-targets.html">row targets</a></td>
-    <td><a href="row-top-axis.html">row top axis</a></td>
-    <td><a href="row-vertical-line.html">row vertical line</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\replacing-data.html">C:\Users\MohanKiranMathew\dc.js\web\examples\replacing data</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\right-axis.html">C:\Users\MohanKiranMathew\dc.js\web\examples\right axis</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\row-targets.html">C:\Users\MohanKiranMathew\dc.js\web\examples\row targets</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\row-top-axis.html">C:\Users\MohanKiranMathew\dc.js\web\examples\row top axis</a></td>
   </tr>
   <tr>
-    <td><a href="row.html">row</a></td>
-    <td><a href="scatter-brushing.html">scatter brushing</a></td>
-    <td><a href="scatter-canvas-brushing.html">scatter canvas brushing</a></td>
-    <td><a href="scatter-canvas-large.html">scatter canvas large</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\row-vertical-line.html">C:\Users\MohanKiranMathew\dc.js\web\examples\row vertical line</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\row.html">C:\Users\MohanKiranMathew\dc.js\web\examples\row</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\scatter-brushing.html">C:\Users\MohanKiranMathew\dc.js\web\examples\scatter brushing</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\scatter-canvas-brushing.html">C:\Users\MohanKiranMathew\dc.js\web\examples\scatter canvas brushing</a></td>
   </tr>
   <tr>
-    <td><a href="scatter-series.html">scatter series</a></td>
-    <td><a href="scatter-svg-large.html">scatter svg large</a></td>
-    <td><a href="scatter.html">scatter</a></td>
-    <td><a href="select.html">select</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\scatter-canvas-large.html">C:\Users\MohanKiranMathew\dc.js\web\examples\scatter canvas large</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\scatter-series.html">C:\Users\MohanKiranMathew\dc.js\web\examples\scatter series</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\scatter-svg-large.html">C:\Users\MohanKiranMathew\dc.js\web\examples\scatter svg large</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\scatter.html">C:\Users\MohanKiranMathew\dc.js\web\examples\scatter</a></td>
   </tr>
   <tr>
-    <td><a href="series.html">series</a></td>
-    <td><a href="sparkline.html">sparkline</a></td>
-    <td><a href="splom.html">splom</a></td>
-    <td><a href="stacked-bar.html">stacked bar</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\select.html">C:\Users\MohanKiranMathew\dc.js\web\examples\select</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\series.html">C:\Users\MohanKiranMathew\dc.js\web\examples\series</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\sparkline.html">C:\Users\MohanKiranMathew\dc.js\web\examples\sparkline</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\splom.html">C:\Users\MohanKiranMathew\dc.js\web\examples\splom</a></td>
   </tr>
   <tr>
-    <td><a href="sunburst-cat.html">sunburst cat</a></td>
-    <td><a href="sunburst-with-value-accessor.html">sunburst with value accessor</a></td>
-    <td><a href="sunburst.html">sunburst</a></td>
-    <td><a href="switching-time-intervals.html">switching time intervals</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\stacked-bar.html">C:\Users\MohanKiranMathew\dc.js\web\examples\stacked bar</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\sunburst-cat.html">C:\Users\MohanKiranMathew\dc.js\web\examples\sunburst cat</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\sunburst-with-value-accessor.html">C:\Users\MohanKiranMathew\dc.js\web\examples\sunburst with value accessor</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\sunburst.html">C:\Users\MohanKiranMathew\dc.js\web\examples\sunburst</a></td>
   </tr>
   <tr>
-    <td><a href="table-on-aggregated-data.html">table on aggregated data</a></td>
-    <td><a href="table-pagination.html">table pagination</a></td>
-    <td><a href="text-filter-widget.html">text filter widget</a></td>
-    <td><a href="time-intervals.html">time intervals</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\switching-time-intervals.html">C:\Users\MohanKiranMathew\dc.js\web\examples\switching time intervals</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\table-on-aggregated-data.html">C:\Users\MohanKiranMathew\dc.js\web\examples\table on aggregated data</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\table-pagination.html">C:\Users\MohanKiranMathew\dc.js\web\examples\table pagination</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\text-filter-widget.html">C:\Users\MohanKiranMathew\dc.js\web\examples\text filter widget</a></td>
+  </tr>
+  <tr>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\examples\time-intervals.html">C:\Users\MohanKiranMathew\dc.js\web\examples\time intervals</a></td>
   </tr>
 </table>
 </div></body></html>
