--- a/web/resizing/index.html
+++ b/web/resizing/index.html
@@ -8,19 +8,20 @@ Source <a href="https://github.com/dc-js/dc.js/tree/master/web/resizing">
 here</a>.</p>
 <table class="table">
   <tr>
-    <td><a href="resizing-bar.html">resizing bar</a></td>
-    <td><a href="resizing-heatmap.html">resizing heatmap</a></td>
-    <td><a href="resizing-pie.html">resizing pie</a></td>
-    <td><a href="resizing-right-axis.html">resizing right axis</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\resizing\index.html">C:\Users\MohanKiranMathew\dc.js\web\resizing\index</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing-bar.html">C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing bar</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing-heatmap.html">C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing heatmap</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing-pie.html">C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing pie</a></td>
   </tr>
   <tr>
-    <td><a href="resizing-row.html">resizing row</a></td>
-    <td><a href="resizing-scatter-brushing.html">resizing scatter brushing</a></td>
-    <td><a href="resizing-scatter-flexbox-observer.html">resizing scatter flexbox observer</a></td>
-    <td><a href="resizing-series.html">resizing series</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing-right-axis.html">C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing right axis</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing-row.html">C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing row</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing-scatter-brushing.html">C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing scatter brushing</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing-scatter-flexbox-observer.html">C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing scatter flexbox observer</a></td>
   </tr>
   <tr>
-    <td><a href="resizing-sunburst.html">resizing sunburst</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing-series.html">C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing series</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing-sunburst.html">C:\Users\MohanKiranMathew\dc.js\web\resizing\resizing sunburst</a></td>
   </tr>
 </table>
 </div></body></html>
