--- a/web/transitions/index.html
+++ b/web/transitions/index.html
@@ -8,22 +8,25 @@ Source <a href="https://github.com/dc-js/dc.js/tree/master/web/transitions">
 here</a>.</p>
 <table class="table">
   <tr>
-    <td><a href="area-progression.html">area progression</a></td>
-    <td><a href="area-transitions.html">area transitions</a></td>
-    <td><a href="bar-progression.html">bar progression</a></td>
-    <td><a href="bar-transitions.html">bar transitions</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\transitions\area-progression.html">C:\Users\MohanKiranMathew\dc.js\web\transitions\area progression</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\transitions\area-transitions.html">C:\Users\MohanKiranMathew\dc.js\web\transitions\area transitions</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\transitions\bar-progression.html">C:\Users\MohanKiranMathew\dc.js\web\transitions\bar progression</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\transitions\bar-transitions.html">C:\Users\MohanKiranMathew\dc.js\web\transitions\bar transitions</a></td>
   </tr>
   <tr>
-    <td><a href="number-transitions.html">number transitions</a></td>
-    <td><a href="ordinal-bar-transitions.html">ordinal bar transitions</a></td>
-    <td><a href="ordinal-line-transitions.html">ordinal line transitions</a></td>
-    <td><a href="ordinal-row-transitions.html">ordinal row transitions</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\transitions\index.html">C:\Users\MohanKiranMathew\dc.js\web\transitions\index</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\transitions\number-transitions.html">C:\Users\MohanKiranMathew\dc.js\web\transitions\number transitions</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\transitions\ordinal-bar-transitions.html">C:\Users\MohanKiranMathew\dc.js\web\transitions\ordinal bar transitions</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\transitions\ordinal-line-transitions.html">C:\Users\MohanKiranMathew\dc.js\web\transitions\ordinal line transitions</a></td>
   </tr>
   <tr>
-    <td><a href="pie-external-label-transitions.html">pie external label transitions</a></td>
-    <td><a href="pie-transitions.html">pie transitions</a></td>
-    <td><a href="series-progression.html">series progression</a></td>
-    <td><a href="stacked-bar-transitions.html">stacked bar transitions</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\transitions\ordinal-row-transitions.html">C:\Users\MohanKiranMathew\dc.js\web\transitions\ordinal row transitions</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\transitions\pie-external-label-transitions.html">C:\Users\MohanKiranMathew\dc.js\web\transitions\pie external label transitions</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\transitions\pie-transitions.html">C:\Users\MohanKiranMathew\dc.js\web\transitions\pie transitions</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\transitions\series-progression.html">C:\Users\MohanKiranMathew\dc.js\web\transitions\series progression</a></td>
+  </tr>
+  <tr>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\transitions\stacked-bar-transitions.html">C:\Users\MohanKiranMathew\dc.js\web\transitions\stacked bar transitions</a></td>
   </tr>
 </table>
 </div></body></html>
