--- a/web/zoom/index.html
+++ b/web/zoom/index.html
@@ -8,7 +8,8 @@ Source <a href="https://github.com/dc-js/dc.js/tree/master/web/zoom">
 here</a>.</p>
 <table class="table">
   <tr>
-    <td><a href="restrict-panning.html">restrict panning</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\zoom\index.html">C:\Users\MohanKiranMathew\dc.js\web\zoom\index</a></td>
+    <td><a href="C:\Users\MohanKiranMathew\dc.js\web\zoom\restrict-panning.html">C:\Users\MohanKiranMathew\dc.js\web\zoom\restrict panning</a></td>
   </tr>
 </table>
 </div></body></html>
