--- a/web-src/play-ground.html
+++ b/web-src/play-ground.html
@@ -682,7 +682,7 @@ Country filter: <input id="custom-filter" type="text"/>
 </table>
 
 <script type="text/javascript">
-var pieChartValue = dc.pieChart("#pie-chart-value")
+var pieChartValue = new dc.PieChart("#pie-chart-value")
         .width(250)
         .height(250)
         .radius(100)
@@ -690,7 +690,7 @@ var pieChartValue = dc.pieChart("#pie-chart-value")
         .dimension(valueDimension)
         .group(valueGroup);
 
-var pieChartCountry = dc.pieChart("#pie-chart-country")
+var pieChartCountry = new dc.PieChart("#pie-chart-country")
         .width(250)
         .height(250)
         .radius(100)
@@ -739,7 +739,7 @@ lineChartDate.width(500)
         .xUnits(d3.timeDays)
         .elasticY(true)
         .renderArea(true)
-        .legend(dc.legend().x(400).y(10).itemHeight(13).gap(5))
+        .legend(new dc.Legend().x(400).y(10).itemHeight(13).gap(5))
         .xAxis().ticks(5);
 
 var barChartDate = new dc.BarChart("#bar-chart-date");
@@ -755,7 +755,7 @@ barChartDate.width(500)
         })
         .gap(1)
         .x(d3.scaleTime().domain([new Date(2012, 4, 20), new Date(2012, 7, 15)]))
-        .legend(dc.legend().x(400).y(10).itemHeight(13).gap(5))
+        .legend(new dc.Legend().x(400).y(10).itemHeight(13).gap(5))
         .xUnits(d3.timeDays)
         .xAxis().ticks(5);
 
@@ -779,7 +779,7 @@ compositeChartDate.width(500)
                 lineChartDate.focus(chart.filter());
             });
         })
-        .legend(dc.legend().x(400).y(10).itemHeight(13).gap(5))
+        .legend(new dc.Legend().x(400).y(10).itemHeight(13).gap(5))
         .xAxis().ticks(5);
 
 var bubbleChart = new dc.BubbleChart("#bubble-chart");
@@ -898,7 +898,7 @@ rowChart.width(1100)
             return d.value;
         });
 
-var scatterPlot = dc.scatterPlot("#scatterplot");
+var scatterPlot = new dc.ScatterPlot("#scatterplot");
 scatterPlot.width(500)
             .height(180)
             .dimension(dateDimension)
